--- a/.github/workflows/seo-validation.yml
+++ b/.github/workflows/seo-validation.yml
@@ -19,7 +19,7 @@ jobs :
           enableComments: true
           minScore: 80
           outputDirectory: /tmp/artifacts
-          urls: 'https://www.foo.software|https://www.foo.software/lighthouse'
+          urls: 'https://landing-page-audit-ux.vercel.app|https://landing-page-audit-ux.vercel.app/lighthouse'
           sha: ${{ github.sha }}
           slackWebhookUrl: ${{ secrets.BINOCULARS_WEBHOOK_URL }}
       - name: Upload artifacts
