--- a/.github/workflows/seo-validation.yml
+++ b/.github/workflows/seo-validation.yml
@@ -1,5 +1,7 @@
 name : seo-validation
-on : deployment
+on : 
+   push : 
+       branches : main
 jobs : 
    binoculars:
     runs-on: ubuntu-latest
@@ -9,19 +11,12 @@ jobs :
       - name: Run Binoculars
         uses: foo-software/binoculars-action@master
         with:
-          accessToken: ${{ secrets.BINOCULARS_GITHUB_ACCESS_TOKEN }}
-          author: ${{ github.actor }}
-          awsAccessKeyId: ${{ secrets.BINOCULARS_AWS_ACCESS_KEY_ID }}
-          awsBucket: ${{ secrets.BINOCULARS_AWS_BUCKET }}
-          awsRegion: ${{ secrets.BINOCULARS_AWS_REGION }}
-          awsSecretAccessKey: ${{ secrets.BINOCULARS_AWS_SECRET_ACCESS_KEY }}
           branch: ${{ github.ref }}
           enableComments: true
-          minScore: 80
+          minScore: 95
           outputDirectory: /tmp/artifacts
           urls: 'https://landing-page-audit-ux.vercel.app|https://landing-page-audit-ux.vercel.app/lighthouse'
           sha: ${{ github.sha }}
-          slackWebhookUrl: ${{ secrets.BINOCULARS_WEBHOOK_URL }}
       - name: Upload artifacts
         uses: actions/upload-artifact@master
         with:
